# CapyVagas-UTFPR

./: .dockerignore  .env.example  .gitignore  ACESSO_RAPIDO.md  CHANGELOG.md  COMO_RODAR_DOCKER.md  CORREÇÕES_CONFIG_WAHA.md  Makefile  QUICKSTART.md  README.md  REFACTORING.md  RELATORIO_FINAL.md  SESSION_INFO.txt  SISTEMA_IMPLEMENTADO.md  WAHA_FIX_DOCUMENTATION.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  reset_config.py  setup_secrets.sh
apps/bot/: admin.py  health.py  models.py  services.py  services_old.py  views.py
apps/bot/handlers/: __init__.py  authentication.py  base.py  job_search.py  menu.py
apps/bot/migrations/: 0001_initial.py  0002_bothealthcheck_botmetrics_and_more.py  0003_botconfiguration.py  0004_botconfiguration_admin_password_and_more.py  0005_alter_botconfiguration_admin_password_and_more.py  0006_botmessage.py
apps/bot/tests/: test_bot_service.py  test_waha_client.py
apps/core/: models.py
apps/core/views/: __init__.py  health.py
apps/courses/: models.py
apps/dashboard/: api_urls.py  api_views.py  serializers.py  urls.py  views.py
apps/jobs/: models.py
apps/users/: models.py  services.py
config/: env.py
deployment/scripts/: setup_secrets.sh  validate_environment.sh
docker/django/: Dockerfile  start.sh
docker/waha/: README.md  entrypoint.sh
docs/architecture/: OVERVIEW.md
docs/guides/: CONFIGURACAO_LOCAL.md  CREDENCIAIS.md  DASHBOARD_DOCUMENTATION.md
docs/troubleshooting/: WAHA_COMPLETE_GUIDE.md  WAHA_FIX_DOCUMENTATION.md
infra/jobspy/: service.py
infra/middleware/: __init__.py  correlation_id.py  structured_logging.py
infra/security/: __init__.py  encryption.py  fields.py
infra/traefik/: traefik.yml
infra/waha/: client.py
scripts/: setup-local.sh
secrets/: .gitignore  README.md  django_secret_key.txt.example  waha_api_key.txt.example  waha_dashboard_password.txt.example  waha_swagger_password.txt.example
waha_bot/: asgi.py  settings.py  urls.py  wsgi.py
(+18 files in other folders)
